force-app/main/default/objects/Extole_Backfill_Log__c/Extole_Backfill_Log__c.object-meta.xml
<CustomObject>
    <label>Extole Backfill Log</label>
    <nameField>
        <label>Log Name</label>
        <type>AutoNumber</type>
        <displayFormat>BFL-{0000}</displayFormat>
    </nameField>
    <pluralLabel>Extole Backfill Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>