force-app/main/default/objects/Extole_Backfill_Log__c/fields/Audience_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Audience_Criteria__c</fullName>
    <label>Audience Criteria</label>
    <type>Text</type>
    <length>255</length>
</CustomField>