force-app/main/default/objects/Extole_Backfill_Log__c/fields/Audience_Type__c.field-meta.xml
<CustomField>
    <fullName>Audience_Type__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Default Filter</fullName><default>true</default><label>Default Filter</label></value>
            <value><fullName>Date Filter</fullName><default>false</default><label>Date Filter</label></value>
            <value><fullName>Report</fullName><default>false</default><label>Report</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>