force-app/main/default/objects/Extole_Backfill_Log__c/fields/Batch_Job_Id__c.field-meta.xml
<CustomField>
    <fullName>Batch_Job_Id__c</fullName>
    <label>Batch Job Id</label>
    <type>Text</type>
    <length>36</length>
</CustomField>