force-app/main/default/objects/Extole_Backfill_Log__c/fields/Object_Type__c.field-meta.xml
<CustomField>
    <fullName>Object_Type__c</fullName>
    <label>Object Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Contact</fullName><default>true</default><label>Contact</label></value>
            <value><fullName>Lead</fullName><default>false</default><label>Lead</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>