force-app/main/default/objects/Extole_Backfill_Log__c/fields/Program_Label__c.field-meta.xml
<CustomField>
    <fullName>Program_Label__c</fullName>
    <label>Program Label</label>
    <type>Text</type>
    <length>255</length>
</CustomField>