force-app/main/default/objects/Extole_Backfill_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>IN_PROGRESS</fullName><default>false</default><label>IN_PROGRESS</label></value>
            <value><fullName>COMPLETED</fullName><default>false</default><label>COMPLETED</label></value>
            <value><fullName>COMPLETED_WITH_ERRORS</fullName><default>false</default><label>COMPLETED_WITH_ERRORS</label></value>
            <value><fullName>FAILED</fullName><default>false</default><label>FAILED</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>