force-app/main/default/objects/Extole_Backfill_Log__c/fields/Target_Field__c.field-meta.xml
<CustomField>
    <fullName>Target_Field__c</fullName>
    <label>Target Field</label>
    <type>Text</type>
    <length>255</length>
</CustomField>