force-app/main/default/objects/Extole_Backfill_Log__c/fields/Total_Count__c.field-meta.xml
<CustomField>
    <fullName>Total_Count__c</fullName>
    <label>Total Count</label>
    <type>Number</type>
    <precision>10</precision>
    <scale>0</scale>
</CustomField>